apps/webapp/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp
  annotations:
    linkerd.io/inject: enabled
